[tool.poetry]
name = "repl_python3_Just-a-Bot"
version = "0.1.0"
description = ""
authors = ["snehashis365 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}
firebase-admin = "^5.0.1"
pyshorteners = "^1.0.1"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
deep-translator = "^1.5.0"
discord-py-slash-command = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
